--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "material-icons-font": "^2.1.0",
     "material-react-table": "^1.14.0",
     "moment": "^2.29.3",
-    "node-sass": "^6.0.1",
     "normalizr": "^3.6.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -108,6 +107,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.66.1",
     "sockjs-client": "^1.6.0",
     "stompjs": "^2.3.3",
     "styled-components": "^5.3.5",
