--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@devexpress/dx-react-core": "^2.7.2",
-    "@devexpress/dx-react-grid": "^2.7.2",
-    "@devexpress/dx-react-grid-export": "^2.7.6",
-    "@devexpress/dx-react-grid-material-ui": "^2.7.2",
     "@elastic/apm-rum": "^5.12.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -47,12 +43,10 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.19.2",
     "babel-polyfill": "^6.23.0",
-    "bcrypt": "*",
     "browser-image-compression": "^2.0.2",
     "chart.js": "^3.8.0",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
-    "dotenv": "^8.2.0",
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.15-beta.0",
     "eslint": "^7.12.1",
@@ -81,15 +75,10 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-draggable": "^4.4.4",
-    "react-dropzone": "^11.7.1",
     "react-excel-workbook": "^0.0.4",
     "react-helmet": "^6.0.0-beta.2",
-    "react-highlight": "^0.12.0",
-    "react-html-table-to-excel": "^2.0.0",
     "react-i18next": "^11.15.3",
     "react-icons": "^4.7.1",
-    "react-material-ui-form-validator": "^2.0.9",
-    "react-quill": "^1.3.5",
     "react-redux": "^7.0.3",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.3.4",
@@ -100,9 +89,6 @@
     "react-swipeable-views": "^0.14.0",
     "react-tabs": "^3.2.1",
     "react-toastify": "^8.2.0",
-    "react-tsparticles": "^2.8.0",
-    "react-vis": "^1.11.7",
-    "recharts": "^1.6.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.6",
@@ -111,10 +97,7 @@
     "sockjs-client": "^1.6.0",
     "stompjs": "^2.3.3",
     "styled-components": "^5.3.5",
-    "swiper": "^4.5.0",
-    "tempa-xlsx": "^0.8.20",
-    "tsparticles": "^2.8.0",
-    "xlsx": "^0.18.5",
+    "uuid": "^9.0.1",
     "yup": "^0.29.3"
   },
   "resolutions": {
